# ssh-commander-core

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  qa-nightly.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: connection_manager.rs  event_bus.rs  file_entry.rs  ftp_client.rs  lib.rs  sftp_client.rs
crates/core/src/postgres/: config.rs  edit.rs  exec.rs  mod.rs
crates/core/src/ssh/: host_keys.rs  mod.rs  shell.rs  tunnel.rs
crates/core/src/tools/: dns.rs  git.rs  mod.rs  ports.rs  tcpdump.rs
crates/core/tests/: postgres_integration.rs  ssh_sftp_integration.rs
crates/keychain/: Cargo.toml
crates/pg/: Cargo.toml
crates/pg-parquet/: Cargo.toml
crates/pg-parquet/src/: lib.rs
crates/pg/src/: edit.rs  exec.rs  introspect.rs  lib.rs
crates/pg/tests/: postgres_integration.rs
docs/: qa.md
src/: connection_manager.rs  desktop_protocol.rs  ftp_client.rs  keychain.rs  lib.rs  rdp_client.rs  sftp_client.rs  vnc_client.rs
src/postgres/: config.rs  edit.rs  exec.rs  introspect.rs  mod.rs  parquet_export.rs  tunnel.rs
src/ssh/: host_keys.rs  mod.rs  shell.rs  tests.rs
src/tools/: dns.rs  git.rs  mod.rs  ports.rs
