[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/pg-parquet",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Andreas Mueller <herban.mueller@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asmuelle/ssh-commander-core"
homepage = "https://github.com/asmuelle/ssh-commander-core"
