[package]
name = "ssh-commander-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Async PostgreSQL connection pool, introspection, and query execution for ssh-commander-core. Dials a plain host:port and is agnostic of SSH tunneling."
documentation = "https://docs.rs/ssh-commander-pg"
readme = "../../README.md"
keywords = ["postgres", "postgresql", "database", "pool", "introspection"]
categories = ["database", "asynchronous"]

[dependencies]
ssh-commander-keychain = { path = "../keychain", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8"

[dev-dependencies]
proptest = "1"
